make automake a default dependency

--- a/Vagrant/provision.yml
+++ b/Vagrant/provision.yml
@@ -20,6 +20,7 @@
       - build-essential
       - libtool
       - autotools-dev
+      - automake
       - autoconf
       - pkg-config
       - libssl-dev
